# ai-coding-template

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  package.json  pyproject.toml
.claude/: settings.json
.claude/commands/: README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  claude-triage.yml  subjective-lint.yml
ai/: CLAUDE.md
ai/EVALS/: evaluate.py  tasks.jsonl
ai/PLAYBOOKS/: feature-implementation.md  issue-triage.md
ai/PROMPTS/: code-review.md  debug-loop.md  refactor-plan.md  security-audit.md  write-tests.md
ai/assistants/claude/commands/: explain-code.md  fix-github-issue.md  review-pr.md
ai/assistants/claude/headless/: subjective-lint.sh  triage-issue.sh
ai/assistants/claude/mcp/: .mcp.json
ai/assistants/gemini/: model.config.json  system.md
ai/assistants/local/: adapters.md  model.config.json
ai/assistants/openai/: model.config.json  system.md  tools.json
ai/policies/: content-policy.md  red-team-checklist.md
ai/tools/: format.sh  repo-map.sh  run-tests.sh  typecheck.sh
docker/: Dockerfile  docker-compose.yml
docs/: 00-project-spec.md  01-technical-spec.md  02-api-contracts.md  03-data-model.md  04-coding-standards.md  05-testing-strategy.md  06-security-and-privacy.md  07-deployment-and-ops.md  99-glossary.md
scripts/: bootstrap.sh  generate-repo-map.py  pre-commit.sh
src/: index.js
tests/: example.test.js
